--- a/.lando.yml
+++ b/.lando.yml
@@ -1,9 +1,4 @@
 name: horacioxyz
-services:
-  appserver:
-    type: apache:2.4
-    webroot: ./web
-    ssl: true
-proxy:
-  appserver:
-    - horacio.lndo.site
+recipe: lamp
+config:
+  webroot: ./web
